--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    hello world
+    <h1>hello welcome</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, accusamus deleniti perferendis cum nostrum,
+        impedit non vel voluptatum ullam, itaque laborum! Omnis quas a numquam placeat perferendis, maxime voluptatum
+        beatae.</p>
+    <form action="">
+        <label for="name">name</label>
+        <input type="text" name="" id="name">
+        <button>button</button>
+    </form>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit nesciunt aut corrupti, at sed quibusdam pariatur
+        quis doloribus saepe deleniti reprehenderit distinctio tempore in nulla quia incidunt, nostrum, amet voluptate.
+    </p> 
 </body>
 </html>
